# optimalwebcaching

./: .gitignore  AGENTS.md  CLAUDE.md  QUICK_START.md  test_e2e.py  test_pairwise.py  test_solver_comparison.py  test_solver_small.py
BHRgoal/: CLAUDE.md
BHRgoal/Belady/: Makefile
BHRgoal/BeladySplit/lib/: parse_trace.h
BHRgoal/PFOO-L/lib/: parse_trace.cpp  parse_trace.h
OHRgoal/: CLAUDE.md
OHRgoal/Belady-Size/: Makefile
OHRgoal/Belady-Size/lib/: parse_trace.h
OHRgoal/Belady/lib/: parse_trace.cpp  parse_trace.h
OHRgoal/FOO/: Makefile
OHRgoal/FOO/lib/: parse_trace.cpp  parse_trace.h
OHRgoal/Freq-Size/: Makefile
OHRgoal/Freq-Size/lib/: parse_trace.h
OHRgoal/LocalRatio/: Makefile
OHRgoal/OFMA/: Makefile
OHRgoal/PFOO-L/: Makefile
OHRgoal/PFOO-L/lib/: parse_trace.cpp  parse_trace.h
OHRgoal/PFOO-U/: Makefile
OHRgoal/PFOO-U-Old/: Makefile
OHRgoal/PFOO-U-Old/lib/: parse_trace.cpp  parse_trace.h
OHRgoal/PFOO-U/lib/: parse_trace.cpp  parse_trace.h
Statistics/: CLAUDE.md  Makefile
Statistics/lib/: parse_trace.cpp  parse_trace.h
cuopt-python/: README.md  benchmark.sh  foo_cuopt.py  pyproject.toml
foo-jax/: README.md  README_USAGE.md  generate_training_data.py  pyproject.toml  run_10m_pairwise.py
foo-jax/foo_jax/: __init__.py  __main__.py  cli.py  operators.py  output.py  pairwise.py  pairwise_export.py  pairwise_libcachesim.py  pairwise_temporal.py  solver.py  solver_networkx.py  topology.py  trace_parser.py
foo-jax/foo_jax_fast_parser/: Cargo.toml
foo-jax/foo_jax_fast_parser/src/: lib.rs
foo-jax/tests/: __init__.py
lib/misc/: hash_combine.h
lib/trace/: Makefile  README.md  generate_test_trace  generate_test_trace.cpp  oracle_general_reader.cpp  oracle_general_reader.h  parse_trace.cpp  parse_trace.h
tests/: CLAUDE.md  Makefile
