[project]
name = "foo-jax"
version = "0.1.0"
description = "GPU-accelerated FOO (Flow Offline Optimal) caching algorithm using JAX and r2HPDHG"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Optimal Web Caching Team"}
]
keywords = ["caching", "optimization", "gpu", "jax", "pdlp"]

dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24,<2.0",
    "zstandard>=0.22",
    "typer>=0.9",
    "rich>=13.0",
    "pandas>=2.3.3",
]

# GPU dependencies (require cuDNN installed)
# To enable GPU: pip install jax[cuda12_local]

[project.optional-dependencies]
gpu = [
    "jax[cuda12_local]>=0.4.20",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[project.scripts]
foo-jax = "foo_jax.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foo_jax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
